--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,172 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&family=Playfair+Display:wght@400;700;800&display=swap");
+* {
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+aside,
+nav,
+footer,
+header,
+section {
+  display: block;
+}
+
+ul li {
+  list-style: none;
+}
+
+a,
+a:hover,
+a:visited {
+  text-decoration: none;
+  display: inline-block;
+}
+
+body {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  background-color: #eaeaea;
+}
+
+.outside-img img {
+  background-color: #eaeaea;
+}
+
+.header {
+  margin-bottom: 15vh;
+  height: 16vh;
+  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.15);
+  background-color: #ffffff;
+}
+.header .logo {
+  margin-top: 4vh;
+}
+.header .nav-list__link {
+  color: #000;
+  line-height: 1.2;
+  margin-right: 2vw;
+  margin-top: 6vh;
+  text-transform: uppercase;
+}
+.header .search {
+  margin-top: 5vh;
+}
+.header .search form {
+  background-color: #ffffff;
+  padding-left: 2vw;
+  border: 1px solid #c2c2c2;
+  margin-right: 3vw;
+  margin-left: 3vw;
+}
+.header .search input {
+  outline: none;
+  width: 10vw;
+  padding-right: 10px;
+  background-color: #ffffff;
+}
+.header .search input:focus, .header .search input:active {
+  opacity: 0.3;
+}
+.header .search input::placeholder {
+  text-transform: uppercase;
+  font-size: 12px;
+  text-align: center;
+}
+.header .search .fa {
+  color: #c1c1c1;
+  font-size: 12px;
+}
+
+.hero {
+  margin-bottom: 15vh;
+  padding-top: 6vh;
+  padding-bottom: 6vh;
+  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.15);
+  background: url("../img/hero.png") no-repeat;
+  background-size: cover;
+}
+.hero-info {
+  flex-direction: column;
+}
+.hero-info__logo {
+  margin-bottom: 5vh;
+}
+.hero-info__title {
+  font-family: "Playfair Display", serif;
+  margin-bottom: 2vh;
+  font-size: 24px;
+  font-weight: 600;
+  color: #921026;
+}
+.hero-info__text {
+  margin-bottom: 3vh;
+  width: 30vw;
+  font-weight: 400;
+}
+.hero-info__link {
+  width: 10vw;
+  text-align: center;
+  border: 1px solid #c2c2c2;
+}
+.hero-info__link-btn {
+  display: inline-block;
+  padding: 0.5vh 1vw;
+  font-size: 12px;
+  color: #000;
+}
+
+.meals {
+  padding-top: 6vh;
+  padding-bottom: 6vh;
+  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.15);
+  background-color: white;
+}
+.meals-list__item {
+  width: 28vw;
+}
+.meals-list__item-name {
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  font-weight: 400;
+}
+.meals-list__item-statistics {
+  display: flex;
+  font-family: "OpenSans", sans-serif;
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #555555;
+}
+.meals-list__item-statistics .posted {
+  display: flex;
+  padding-right: 0.5vw;
+  margin-right: 0.5vw;
+  border-right: 1px solid #c4c4c4;
+  height: 2vh;
+}
+.meals-list__item-statistics .comments {
+  display: flex;
+  padding-right: 0.5vw;
+}
+.meals-list__item-statistics .previews {
+  display: flex;
+  padding-right: 0.5vw;
+}
+.meals-list__item-statistics .fa {
+  padding-right: 0.3vw;
+}
+.meals .fa-comment {
+  color: white;
+  text-shadow: 0 0 3px #000;
+}
