--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,17 @@ section {
   display: block;
 }
 
+header,
+section {
+  margin-right: 2vw;
+  margin-left: 2vw;
+}
+
+img {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 ul li {
   list-style: none;
 }
@@ -35,17 +46,16 @@ body {
   font-size: 16px;
   font-weight: 300;
   letter-spacing: 0.025em;
-  background-color: #eaeaea;
+  background-color: #ffffff;
 }
 
-.outside-img img {
-  background-color: #eaeaea;
+.logo img {
+  width: 100%;
 }
 
 .header {
-  margin-bottom: 15vh;
+  margin-bottom: 5vw;
   height: 16vh;
-  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.15);
   background-color: #ffffff;
 }
 .header .logo {
@@ -54,24 +64,28 @@ body {
 .header .nav-list__link {
   color: #000;
   line-height: 1.2;
-  margin-right: 2vw;
+  margin-right: 3vw;
   margin-top: 6vh;
   text-transform: uppercase;
 }
 .header .search {
   margin-top: 5vh;
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
 .header .search form {
   background-color: #ffffff;
   padding-left: 2vw;
   border: 1px solid #c2c2c2;
-  margin-right: 3vw;
-  margin-left: 3vw;
+  margin-right: 1vw;
+  margin-left: 1vw;
+  width: 20vw;
 }
 .header .search input {
   outline: none;
-  width: 10vw;
-  padding-right: 10px;
+  width: 14vw;
+  padding-right: 1vw;
+  margin-left: 2vw;
   background-color: #ffffff;
 }
 .header .search input:focus, .header .search input:active {
@@ -86,13 +100,30 @@ body {
   color: #c1c1c1;
   font-size: 12px;
 }
+@media (max-width: 1199px) {
+  .header .search form {
+    padding-left: 0;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .header .nav {
+    margin-right: 0;
+  }
+  .header .nav-list__link {
+    margin-right: 0.7vw;
+  }
+}
+@media (max-width: 991px) {
+  .header .nav {
+    display: none;
+  }
+}
 
 .hero {
-  margin-bottom: 15vh;
   padding-top: 6vh;
   padding-bottom: 6vh;
-  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.15);
-  background: url("../img/hero.png") no-repeat;
+  padding-left: 4vw;
+  background: url("../img/hero.png") no-repeat 100% 100%;
   background-size: cover;
 }
 .hero-info {
@@ -100,6 +131,7 @@ body {
 }
 .hero-info__logo {
   margin-bottom: 5vh;
+  margin-right: 2vw;
 }
 .hero-info__title {
   font-family: "Playfair Display", serif;
@@ -110,36 +142,41 @@ body {
 }
 .hero-info__text {
   margin-bottom: 3vh;
-  width: 30vw;
+  max-width: 30vw;
   font-weight: 400;
 }
-.hero-info__link {
-  width: 10vw;
-  text-align: center;
-  border: 1px solid #c2c2c2;
-}
-.hero-info__link-btn {
+.hero-info__link a {
   display: inline-block;
-  padding: 0.5vh 1vw;
+  width: 8vw;
+  text-align: center;
+  text-transform: uppercase;
+  border: 1px solid #c2c2c2;
+  padding: 0.2vh 0.5vw;
   font-size: 12px;
   color: #000;
+  width: 10vw;
 }
-
 .meals {
   padding-top: 6vh;
   padding-bottom: 6vh;
-  box-shadow: 0px 0px 13px 0px rgba(0, 0, 0, 0.15);
-  background-color: white;
 }
-.meals-list__item {
-  width: 28vw;
+.meals-wrap {
+  display: flex;
+  justify-content: space-around;
 }
-.meals-list__item-name {
+.meals__item {
+  margin-right: 1vw;
+}
+.meals__item:last-child {
+  margin-right: 0;
+}
+.meals__item-name {
+  width: 26vw;
   margin-top: 1vh;
   margin-bottom: 1vh;
   font-weight: 400;
 }
-.meals-list__item-statistics {
+.meals__item-statistics {
   display: flex;
   font-family: "OpenSans", sans-serif;
   font-size: 12px;
@@ -148,25 +185,187 @@ body {
   letter-spacing: 0.025em;
   color: #555555;
 }
-.meals-list__item-statistics .posted {
+.meals__item-statistics .posted {
   display: flex;
   padding-right: 0.5vw;
   margin-right: 0.5vw;
   border-right: 1px solid #c4c4c4;
   height: 2vh;
 }
-.meals-list__item-statistics .comments {
+.meals__item-statistics .comments {
   display: flex;
   padding-right: 0.5vw;
 }
-.meals-list__item-statistics .previews {
+.meals__item-statistics .previews {
   display: flex;
   padding-right: 0.5vw;
 }
-.meals-list__item-statistics .fa {
+.meals__item-statistics .fa {
   padding-right: 0.3vw;
 }
 .meals .fa-comment {
   color: white;
   text-shadow: 0 0 3px #000;
+}
+@media (max-width: 1199px) {
+  .meals-list__item {
+    width: 26vw;
+    margin-right: 3vw;
+  }
+  .meals-list__item-name {
+    width: 23vw;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
+    font-weight: 400;
+  }
+}
+@media (max-width: 991px) {
+  .meals-list {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .meals-list__item {
+    width: 60vw;
+    margin-right: 0;
+  }
+  .meals-list__item-photo {
+    width: 50vw;
+  }
+}
+
+.recipe-wrap {
+  background: url("../img/recipe_desc.png") no-repeat center;
+  background-size: cover;
+}
+.recipe-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-top: 2vh;
+}
+.recipe-info__title {
+  font-family: "Playfair Display", serif;
+  margin-right: 4vw;
+  font-size: 32px;
+  font-weight: 900;
+  color: #055555;
+}
+.recipe-info__top {
+  display: flex;
+  justify-content: space-between;
+}
+.recipe-info__top-time {
+  padding-right: 1vw;
+}
+.recipe-info__top-favorite {
+  align-items: flex-end;
+  margin-left: 22vw;
+  margin-right: 4vw;
+}
+.recipe-info__top-favorite a {
+  display: inline-block;
+  text-transform: uppercase;
+  border: 1px solid #c2c2c2;
+  padding: 0.2vh 0.5vw;
+  font-size: 12px;
+  color: #000;
+}
+.recipe-info__bottom {
+  max-width: 39vw;
+  overflow-y: auto;
+  margin-right: 2vw;
+  font-size: 16px;
+}
+.recipe-info__bottom__ingredients {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  margin-bottom: 2vh;
+  font-weight: 400;
+}
+.recipe-info__bottom__directions_title {
+  font-family: "Playfair Display", serif;
+  margin-bottom: 2vh;
+  font-weight: 900;
+}
+.recipe-info__bottom__directions_desc {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  font-weight: 400;
+}
+.recipe-info__bottom__directions_desc span {
+  font-family: "Sylfaen";
+  font-weight: 400;
+}
+
+.footer {
+  padding: 6vh 0;
+  background-color: #000;
+  color: rgba(254, 254, 254, 0.6);
+  font-size: 14px;
+}
+.footer .nav {
+  margin-top: 3vh;
+}
+.footer .nav-list__link {
+  margin-left: 1vw;
+}
+.footer .nav-list a {
+  display: inline-block;
+  text-transform: uppercase;
+  color: rgba(254, 254, 254, 0.6);
+}
+.footer .rights {
+  margin-left: 14vw;
+  font-size: 13px;
+}
+.footer .social {
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+.footer .fa {
+  margin-left: 1vw;
+  margin-right: 0.5vw;
+}
+@media (max-width: 991px) {
+  .footer .nav {
+    margin-top: 2vh;
+  }
+  .footer .nav-list {
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-left: 25vw;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  .footer .nav-list__link {
+    margin-left: 1vw;
+  }
+  .footer .nav-list a {
+    display: inline-block;
+    text-transform: uppercase;
+    color: rgba(254, 254, 254, 0.6);
+  }
+  .footer .social {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+}
+@media (max-width: 767px) {
+  .footer .nav-list__link {
+    font-size: 12px;
+    margin-left: 0;
+  }
+  .footer .social {
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  .footer .rights .fa-copyright {
+    margin-left: 0;
+    margin-right: 6vw;
+  }
 }
