--- a/css/main.css
+++ b/css/main.css
@@ -54,19 +54,76 @@ body {
 }
 
 .header {
-  margin-bottom: 5vw;
+  margin-bottom: 8vw;
   height: 16vh;
   background-color: #ffffff;
 }
 .header .logo {
   margin-top: 4vh;
 }
-.header .nav-list__link {
-  color: #000;
-  line-height: 1.2;
-  margin-right: 3vw;
-  margin-top: 6vh;
-  text-transform: uppercase;
+.header .nav {
+  height: 10vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 4vh;
+}
+.header .nav-recipes, .header .nav-login {
+  position: relative;
+}
+.header .nav-recipes ul, .header .nav-login ul {
+  margin-top: -240px;
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  width: 30vh;
+  height: 30vh;
+  background: rgba(240, 202, 202, 0.5);
+  left: 0px;
+  list-style: none;
+  border-radius: 5px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-10px);
+  transition: all 0.4s ease;
+  z-index: 20;
+}
+.header .nav-recipes li, .header .nav-login li {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .nav-recipes li:hover, .header .nav-login li:hover {
+  background-color: rgba(197, 173, 181, 0.5);
+  outline: none;
+}
+.header .nav-recipes li a, .header .nav-login li a {
+  color: black;
+  text-decoration: none;
+  outline: none;
+  font-size: 14px;
+  font-weight: 400;
+}
+.header .nav-recipes button:focus + ul, .header .nav-login button:focus + ul {
+  opacity: 1;
+  pointer-events: all;
+  transform: translateY(260px) translateX(-60px);
+  outline: none;
+}
+.header .nav button, .header .nav-home,
+.header .nav a {
+  background: none;
+  text-decoration: none;
+  border: none;
+  color: #a9a9a9;
+  font-size: 18px;
+  cursor: pointer;
+  outline: none;
 }
 .header .search {
   margin-top: 5vh;
@@ -106,12 +163,6 @@ body {
     margin-right: 0;
     margin-left: 0;
   }
-  .header .nav {
-    margin-right: 0;
-  }
-  .header .nav-list__link {
-    margin-right: 0.7vw;
-  }
 }
 @media (max-width: 991px) {
   .header .nav {
@@ -125,6 +176,7 @@ body {
   padding-left: 4vw;
   background: url("../img/hero.png") no-repeat 100% 100%;
   background-size: cover;
+  z-index: 15;
 }
 .hero-info {
   flex-direction: column;
@@ -156,6 +208,29 @@ body {
   color: #000;
   width: 10vw;
 }
+@media (max-width: 991px) {
+  .hero-info {
+    height: 50vh;
+  }
+  .hero-info__logo {
+    display: none;
+  }
+  .hero-info__text {
+    display: none;
+  }
+  .hero-info__title {
+    margin-top: 39vh;
+    margin-left: -7vw;
+  }
+  .hero-info__link {
+    margin-left: 60vw;
+    margin-top: -5vh;
+  }
+  .hero-info__link a {
+    width: 20vw;
+  }
+}
+
 .meals {
   padding-top: 6vh;
   padding-bottom: 6vh;
@@ -310,22 +385,78 @@ body {
 }
 .footer .nav {
   margin-top: 3vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-.footer .nav-list__link {
-  margin-left: 1vw;
+.footer .nav-recipes, .footer .nav-login {
+  position: relative;
 }
-.footer .nav-list a {
-  display: inline-block;
-  text-transform: uppercase;
-  color: rgba(254, 254, 254, 0.6);
+.footer .nav-recipes ul, .footer .nav-login ul {
+  margin-top: -250px;
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  width: 30vh;
+  height: 30vh;
+  background: white;
+  left: 0px;
+  list-style: none;
+  border-radius: 5px;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(-10px);
+  transition: all 0.4s ease;
+}
+.footer .nav-recipes li, .footer .nav-login li {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+}
+.footer .nav-recipes li:hover, .footer .nav-login li:hover {
+  background-color: #c5adb5;
+  outline: none;
+}
+.footer .nav-recipes li a, .footer .nav-login li a {
+  color: black;
+  text-decoration: none;
+  outline: none;
+}
+.footer .nav-recipes button:focus + ul, .footer .nav-login button:focus + ul {
+  opacity: 1;
+  pointer-events: all;
+  transform: translateY(0px) translateX(-70px);
+  outline: none;
+}
+.footer .nav button, .footer .nav-home,
+.footer .nav a {
+  background: none;
+  text-decoration: none;
+  border: none;
+  color: white;
+  font-size: 18px;
+  cursor: pointer;
+  outline: none;
+}
+.footer .nav-home:hover {
+  color: white;
 }
 .footer .rights {
-  margin-left: 14vw;
   font-size: 13px;
+  margin-top: 4vh;
+  color: #fefefe;
 }
 .footer .social {
   align-items: flex-end;
   justify-content: flex-end;
+}
+.footer .social a {
+  color: #a9a9a9;
 }
 .footer .fa {
   margin-left: 1vw;
@@ -335,37 +466,479 @@ body {
   .footer .nav {
     margin-top: 2vh;
   }
-  .footer .nav-list {
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
-    margin-left: 25vw;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  }
-  .footer .nav-list__link {
-    margin-left: 1vw;
-  }
-  .footer .nav-list a {
-    display: inline-block;
-    text-transform: uppercase;
-    color: rgba(254, 254, 254, 0.6);
-  }
   .footer .social {
     justify-content: flex-start;
     align-items: flex-start;
   }
 }
 @media (max-width: 767px) {
-  .footer .nav-list__link {
-    font-size: 12px;
-    margin-left: 0;
-  }
   .footer .social {
     justify-content: flex-start;
     align-items: flex-start;
   }
-  .footer .rights .fa-copyright {
-    margin-left: 0;
-    margin-right: 6vw;
+}
+
+input,
+textarea {
+  font-family: "PT Sans", sans-serif;
+  font-size: 1.6rem;
+}
+
+input::-ms-clear,
+textarea::-ms-clear {
+  display: none;
+}
+
+/* -------------------------------- 
+
+  Login/Signup modal window - by CodyHouse.co
+
+  -------------------------------- */
+.cd-main-header {
+  position: relative;
+  z-index: 1;
+  height: 50px;
+  background: #343642;
+}
+
+.cd-main-header::after {
+  /* clearfix */
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.cd-main-header__logo {
+  float: left;
+  margin: 4px 0 0 5%;
+  /* reduce logo size on mobile and make sure it is left aligned with the transform-origin property */
+  transform-origin: 0 50%;
+  transform: scale(0.8);
+}
+
+.cd-main-header__logo img {
+  display: block;
+}
+
+@media only screen and (min-width: 768px) {
+  .cd-main-header {
+    height: 80px;
   }
+
+  .cd-main-header__logo {
+    margin: 20px 0 0 5%;
+    transform: scale(1);
+  }
+}
+.cd-main-nav {
+  float: right;
+  margin-right: 5%;
+  width: 44px;
+  height: 100%;
+  background: url("../img/cd-icon-menu.svg") no-repeat center center;
+  cursor: pointer;
+}
+
+.cd-main-nav__list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: translateY(-100%);
+}
+
+.cd-main-nav__list.cd-main-nav__list--is-visible {
+  transform: translateY(50px);
+}
+
+.cd-main-nav__item {
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  padding-left: 5%;
+  background: #292a34;
+  border-top: 1px solid #3b3d4b;
+  color: #921026;
+}
+
+@media only screen and (min-width: 768px) {
+  .cd-main-nav {
+    /* reset style */
+    width: auto;
+    height: auto;
+    background: none;
+    cursor: auto;
+  }
+
+  .cd-main-nav__list {
+    /* reset style */
+    position: static;
+    width: auto;
+    transform: translateY(0);
+    line-height: 80px;
+  }
+
+  .cd-main-nav__list.cd-main-nav__list--is-visible {
+    /* reset style */
+    transform: translateY(0);
+  }
+
+  .cd-main-nav__list li {
+    display: inline-block;
+    margin-left: 1em;
+  }
+
+  .cd-main-nav__list li:nth-last-child(2) {
+    margin-left: 2em;
+  }
+
+  .cd-main-nav__item {
+    display: inline-block;
+    height: auto;
+    line-height: normal;
+    background: transparent;
+  }
+
+  .cd-main-nav__item.cd-main-nav__item--signin,
+.cd-main-nav__item.cd-main-nav__item--signup {
+    padding: 0.6em 1em;
+    border-radius: 0;
+  }
+
+  .cd-main-nav__item.cd-main-nav__item--signin {
+    background-color: #d24d57;
+    border: none;
+    border: 2px solid #d24d57;
+    border-radius: 3px;
+    border-bottom: 3px solid #B5002A;
+    color: #fff;
+  }
+
+  .cd-main-nav__item.cd-main-nav__item--signup {
+    border: none;
+    border: 2px solid #d24d57;
+    border-radius: 3px;
+    border-bottom: 3px solid #B5002A;
+  }
+}
+/* -------------------------------- 
+
+  x sigin/signup popup 
+
+  -------------------------------- */
+.cd-signin-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(52, 54, 66, 0.9);
+  z-index: 3;
+  overflow-y: auto;
+  cursor: pointer;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s, visibility 0.3s;
+}
+
+.cd-signin-modal.cd-signin-modal--is-visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.cd-signin-modal__container {
+  position: relative;
+  width: 90%;
+  max-width: 600px;
+  background: #FFF;
+  margin: 3em auto 4em;
+  cursor: auto;
+  border-radius: 0.25em;
+  transform: translateY(-30px);
+  transition: transform 0.3s;
+}
+
+.cd-signin-modal--is-visible .cd-signin-modal__container {
+  transform: translateY(0);
+}
+
+.cd-signin-modal__switcher:after {
+  /* clearfix */
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.cd-signin-modal__switcher li {
+  width: 50%;
+  float: left;
+  text-align: center;
+}
+
+.cd-signin-modal__switcher li:first-child a {
+  border-radius: 0.25em 0 0 0;
+}
+
+.cd-signin-modal__switcher li:last-child a {
+  border-radius: 0 0.25em 0 0;
+}
+
+.cd-signin-modal__switcher a {
+  display: block;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background: rgba(210, 77, 87, 0.6);
+  color: #fff;
+}
+
+.cd-signin-modal__switcher a.cd-selected {
+  background: #FFF;
+  color: rgba(210, 77, 87, 0.8);
+}
+
+@media only screen and (min-width: 600px) {
+  .cd-signin-modal__container {
+    margin: 4em auto;
+  }
+
+  .cd-signin-modal__switcher a {
+    height: 70px;
+    line-height: 70px;
+  }
+}
+.cd-signin-modal__form {
+  padding: 1.4em;
+}
+
+.cd-signin-modal__fieldset {
+  position: relative;
+  margin: 1.4em 0;
+}
+
+.cd-signin-modal__fieldset:first-child {
+  margin-top: 0;
+}
+
+.cd-signin-modal__fieldset:last-child {
+  margin-bottom: 0;
+}
+
+.cd-signin-modal__label {
+  font-size: 1.4rem;
+}
+
+.cd-signin-modal__label.cd-signin-modal__label--image-replace {
+  /* replace text with an icon */
+  display: inline-block;
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  bottom: auto;
+  transform: translateY(-50%);
+  height: 20px;
+  width: 20px;
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  color: transparent;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+}
+
+.cd-signin-modal__label.cd-signin-modal__label--username {
+  background-image: url("../img/cd-icon-username.svg");
+}
+
+.cd-signin-modal__label.cd-signin-modal__label--email {
+  background-image: url("../img/cd-icon-email.svg");
+}
+
+.cd-signin-modal__label.cd-signin-modal__label--password {
+  background-image: url("../img/cd-icon-password.svg");
+}
+
+.cd-signin-modal__input {
+  margin: 0;
+  padding: 0;
+  border-radius: 0.25em;
+}
+
+.cd-signin-modal__input.cd-signin-modal__input--full-width {
+  width: 100%;
+}
+
+.cd-signin-modal__input.cd-signin-modal__input--has-padding {
+  padding: 12px 20px 12px 50px;
+}
+.cd-signin-modal__input.cd-signin-modal__input--has-padding::placeholder {
+  font-style: italic;
+}
+
+.cd-signin-modal__input.cd-signin-modal__input--has-border {
+  border: 1px solid #d2d8d8;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.cd-signin-modal__input.cd-signin-modal__input--has-border:focus {
+  border-color: #343642;
+  box-shadow: 0 0 5px rgba(52, 54, 66, 0.1);
+  outline: none;
+}
+
+.cd-signin-modal__input.cd-signin-modal__input--has-error {
+  border: 1px solid #d76666;
+}
+
+.cd-signin-modal__input[type=submit] {
+  padding: 16px 0;
+  cursor: pointer;
+  background: #d24d57;
+  color: #FFF;
+  font-weight: bold;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.cd-signin-modal__input[type=submit]:hover,
+.cd-signin-modal__input[type=submit]:focus {
+  opacity: 0.8;
+  outline: none;
+}
+
+.cd-signin-modal__hide-password {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 6px 15px;
+  border-left: 1px solid #d2d8d8;
+  top: 50%;
+  bottom: auto;
+  transform: translateY(-50%);
+  font-size: 1.4rem;
+  color: #343642;
+}
+
+.cd-signin-modal__error {
+  display: inline-block;
+  position: absolute;
+  left: -5px;
+  bottom: -35px;
+  background: rgba(215, 102, 102, 0.9);
+  padding: 0.8em;
+  z-index: 2;
+  color: #FFF;
+  font-size: 1.3rem;
+  border-radius: 0.25em;
+  /* prevent click and touch events */
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.2s 0s, visibility 0s 0.2s;
+}
+
+.cd-signin-modal__error::after {
+  /* triangle */
+  content: "";
+  position: absolute;
+  left: 22px;
+  bottom: 100%;
+  height: 0;
+  width: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid rgba(215, 102, 102, 0.9);
+}
+
+.cd-signin-modal__error.cd-signin-modal__error--is-visible {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.2s 0s, visibility 0s 0s;
+}
+
+@media only screen and (min-width: 600px) {
+  .cd-signin-modal__form {
+    padding: 2em;
+  }
+
+  .cd-signin-modal__fieldset {
+    margin: 2em 0;
+  }
+
+  .cd-signin-modal__fieldset:first-child {
+    margin-top: 0;
+  }
+
+  .cd-signin-modal__fieldset:last-child {
+    margin-bottom: 0;
+  }
+
+  .cd-signin-modal__input.cd-signin-modal__input--has-padding {
+    padding: 16px 20px 16px 50px;
+  }
+
+  .cd-signin-modal__input[type=submit] {
+    padding: 16px 0;
+  }
+}
+.cd-signin-modal__message {
+  padding: 1.4em 1.4em 0;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  text-align: center;
+}
+
+@media only screen and (min-width: 600px) {
+  .cd-signin-modal__message {
+    padding: 2em 2em 0;
+  }
+}
+.cd-signin-modal__bottom-message {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 125px;
+  left: 100px;
+  text-align: center;
+  font-size: 1.2rem;
+}
+
+.cd-signin-modal__bottom-message a {
+  color: #FFF;
+  text-decoration: underline;
+}
+
+.cd-signin-modal__close {
+  /* form X button on top right */
+  display: block;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 0;
+  top: -40px;
+  background: url("../img/cd-icon-close.svg") no-repeat center center;
+  color: transparent;
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+@media only screen and (min-width: 1170px) {
+  .cd-signin-modal__close {
+    display: none;
+  }
+}
+.cd-signin-modal__block {
+  display: none;
+}
+
+.cd-signin-modal__block.cd-signin-modal__block--is-selected {
+  display: block;
 }
