--- a/css/main.scss
+++ b/css/main.scss
@@ -362,48 +362,74 @@ body {
     }
 
     .search {
-        margin-top: 5vh;
-        margin-left: 2vw;
-        margin-right: 2vw;
-
-        form {
-            background-color: $color-section-bg;
-            padding-left: 2vw;
-            border: 1px solid #c2c2c2;
-            margin-right: 1vw;
-            margin-left: 1vw;
-            width: 20vw;
-
-
-        }
+        margin-top: 6vh;
 
         input {
             outline: none;
-            width: 14vw;
-            padding-right: 1vw;
-            margin-left: 2vw;
+        }
+
+        input[type=search] {
+            -webkit-appearance: textfield;
+            -webkit-box-sizing: content-box;
+            font-family: inherit;
+            font-size: 100%;
+        }
+
+        input::-webkit-search-decoration,
+        input::-webkit-search-cancel-button {
+            display: none;
+            /* remove the search and cancel icon */
+        }
 
 
+        input[type=search] {
+            width: 18px;
+            padding-left: 10px;
+            background: url("../img/search.svg") no-repeat 2px center;
+            border: solid 1px transparent;
 
-            background-color: $color-section-bg;
 
-            &:focus,
-            &:active {
-                opacity: 0.3;
-            }
+            color: transparent;
+            cursor: pointer;
+
+            -webkit-border-radius: 10em;
+            -moz-border-radius: 10em;
+            border-radius: 10em;
+
+            -webkit-transition: all .5s;
+            -moz-transition: all .5s;
+            transition: all .5s;
 
             &::placeholder {
-                text-transform: uppercase;
-                font-size: 12px;
-                text-align: center;
-
+                color: transparent;
             }
         }
 
-        .fa {
-            color: #c1c1c1;
-            font-size: 12px;
+
+        input[type=search]:hover {
+            background-color: #fff;
+
         }
+
+        input[type=search]:focus {
+            width: 130px;
+            padding-left: 32px;
+            color: #000;
+            background-color: #fff;
+            cursor: auto;
+            border-color: rgba(215, 102, 102, .5);
+
+            -webkit-box-shadow: 0 0 5px rgba(215, 102, 102, .5);
+            -moz-box-shadow: 0 0 5px rgba(215, 102, 102, .5);
+            box-shadow: 0 0 5px rgba(215, 102, 102, .5);
+            &::placeholder {
+                color: #a9a9a9;
+            }
+        }
+
+
+
+
     }
 
     @media (max-width: $screen-lg-max) {
@@ -1054,8 +1080,8 @@ textarea::-ms-clear {
         border: none;
         border: 2px solid rgba(210, 77, 87, 1);
         border-radius: 3px;
-    border-bottom: 3px solid #B5002A;
-    color: #fff;
+        border-bottom: 3px solid #B5002A;
+        color: #fff;
 
     }
 
@@ -1063,7 +1089,7 @@ textarea::-ms-clear {
         border: none;
         border: 2px solid rgba(210, 77, 87, 1);
         border-radius: 3px;
-	border-bottom: 3px solid #B5002A;
+        border-bottom: 3px solid #B5002A;
     }
 }
 
@@ -1108,6 +1134,10 @@ textarea::-ms-clear {
     transition: -webkit-transform 0.3s;
     transition: transform 0.3s;
     transition: transform 0.3s, -webkit-transform 0.3s;
+
+    @media (max-width:$screen-md-max) {
+        margin: 0;
+    }
 }
 
 .cd-signin-modal--is-visible .cd-signin-modal__container {
@@ -1227,6 +1257,7 @@ textarea::-ms-clear {
 
 .cd-signin-modal__input.cd-signin-modal__input--has-padding {
     padding: 12px 20px 12px 50px;
+
     &::placeholder {
         font-style: italic;
     }
@@ -1368,10 +1399,9 @@ textarea::-ms-clear {
     position: absolute;
     width: 100%;
     left: 0;
-    bottom: 125px;
-    left: 100px;
+    bottom: -50px;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
 .cd-signin-modal__bottom-message a {
