--- a/css/main.scss
+++ b/css/main.scss
@@ -422,6 +422,7 @@ body {
             -webkit-box-shadow: 0 0 5px rgba(215, 102, 102, .5);
             -moz-box-shadow: 0 0 5px rgba(215, 102, 102, .5);
             box-shadow: 0 0 5px rgba(215, 102, 102, .5);
+
             &::placeholder {
                 color: #a9a9a9;
             }
@@ -433,6 +434,7 @@ body {
     }
 
     @media (max-width: $screen-lg-max) {
+        display: flex;
 
         .search {
             form {
@@ -949,149 +951,78 @@ textarea::-ms-clear {
   Login/Signup modal window - by CodyHouse.co
   
   -------------------------------- */
-.cd-main-header {
-    position: relative;
-    z-index: 1;
-    height: 50px;
-    background: #343642;
-}
 
-.cd-main-header::after {
-    /* clearfix */
-    content: '';
-    display: table;
-    clear: both;
-}
-
-.cd-main-header__logo {
-    float: left;
-    margin: 4px 0 0 5%;
-    /* reduce logo size on mobile and make sure it is left aligned with the transform-origin property */
-    -webkit-transform-origin: 0 50%;
-    -ms-transform-origin: 0 50%;
-    transform-origin: 0 50%;
-    -webkit-transform: scale(0.8);
-    -ms-transform: scale(0.8);
-    transform: scale(0.8);
-}
-
-.cd-main-header__logo img {
-    display: block;
-}
-
-@media only screen and (min-width: 768px) {
-    .cd-main-header {
-        height: 80px;
-    }
-
-    .cd-main-header__logo {
-        margin: 20px 0 0 5%;
-        -webkit-transform: scale(1);
-        -ms-transform: scale(1);
-        transform: scale(1);
-    }
-}
 
 .cd-main-nav {
-    float: right;
-    margin-right: 5%;
-    width: 44px;
-    height: 100%;
-    background: url("../img/cd-icon-menu.svg") no-repeat center center;
+    display: flex;
     cursor: pointer;
+
+}
+
+
+
+.cd-main-nav {
+    /* reset style */
+    background: none;
+    cursor: auto;
+    margin-top: 3vh;
 }
 
 .cd-main-nav__list {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    -webkit-transform: translateY(-100%);
-    -ms-transform: translateY(-100%);
-    transform: translateY(-100%);
+    /* reset style */
+
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    line-height: 80px;
+
+
 }
 
 .cd-main-nav__list.cd-main-nav__list--is-visible {
-    -webkit-transform: translateY(50px);
-    -ms-transform: translateY(50px);
-    transform: translateY(50px);
+    /* reset style */
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
 }
+
+.cd-main-nav__list li {
+    display: inline-block;
+
+}
+
+.cd-main-nav__list li:nth-last-child(2) {}
 
 .cd-main-nav__item {
-    display: block;
-    height: 50px;
-    line-height: 50px;
-    padding-left: 5%;
-    background: #292a34;
-    border-top: 1px solid #3b3d4b;
-    color: #921026;
+    display: inline-block;
+    line-height: normal;
+    background: transparent;
 }
 
-@media only screen and (min-width: 768px) {
-    .cd-main-nav {
-        /* reset style */
-        width: auto;
-        height: auto;
-        background: none;
-        cursor: auto;
-    }
-
-    .cd-main-nav__list {
-        /* reset style */
-        position: static;
-        width: auto;
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-        line-height: 80px;
-    }
-
-    .cd-main-nav__list.cd-main-nav__list--is-visible {
-        /* reset style */
-        -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-        transform: translateY(0);
-    }
-
-    .cd-main-nav__list li {
-        display: inline-block;
-        margin-left: 1em;
-    }
-
-    .cd-main-nav__list li:nth-last-child(2) {
-        margin-left: 2em;
-    }
-
-    .cd-main-nav__item {
-        display: inline-block;
-        height: auto;
-        line-height: normal;
-        background: transparent;
-    }
-
-    .cd-main-nav__item.cd-main-nav__item--signin,
-    .cd-main-nav__item.cd-main-nav__item--signup {
-        padding: .6em 1em;
-        border-radius: 0;
-    }
-
-    .cd-main-nav__item.cd-main-nav__item--signin {
-        background-color: rgba(210, 77, 87, 1);
-        border: none;
-        border: 2px solid rgba(210, 77, 87, 1);
-        border-radius: 3px;
-        border-bottom: 3px solid #B5002A;
-        color: #fff;
-
-    }
-
-    .cd-main-nav__item.cd-main-nav__item--signup {
-        border: none;
-        border: 2px solid rgba(210, 77, 87, 1);
-        border-radius: 3px;
-        border-bottom: 3px solid #B5002A;
-    }
+.cd-main-nav__item.cd-main-nav__item--signin,
+.cd-main-nav__item.cd-main-nav__item--signup {
+    padding: 1vh 1.5vw;
+    border-radius: 0;
 }
+
+.cd-main-nav__item.cd-main-nav__item--signin {
+    background-color: rgba(210, 77, 87, 1);
+    border: none;
+    border: 2px solid rgba(210, 77, 87, 1);
+    border-radius: 3px;
+    border-bottom: 3px solid #B5002A;
+    color: #fff;
+
+}
+
+.cd-main-nav__item.cd-main-nav__item--signup {
+    border: none;
+    border: 2px solid rgba(210, 77, 87, 1);
+    border-radius: 3px;
+    border-bottom: 3px solid #B5002A;
+    color:  rgba(210, 77, 87, 1);
+}
+
 
 /* -------------------------------- 
   
@@ -1135,7 +1066,7 @@ textarea::-ms-clear {
     transition: transform 0.3s;
     transition: transform 0.3s, -webkit-transform 0.3s;
 
-    @media (max-width:$screen-md-max) {
+    @media (max-width:$screen-sm-max) {
         margin: 0;
     }
 }
@@ -1181,16 +1112,7 @@ textarea::-ms-clear {
     color: rgba(210, 77, 87, 0.8);
 }
 
-@media only screen and (min-width: 600px) {
-    .cd-signin-modal__container {
-        margin: 4em auto;
-    }
 
-    .cd-signin-modal__switcher a {
-        height: 70px;
-        line-height: 70px;
-    }
-}
 
 .cd-signin-modal__form {
     padding: 1.4em;
