--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,16 @@ a:visited {
   display: inline-block;
 }
 
+a:hover,
+button:hover {
+  opacity: 0.8;
+}
+
+a:active,
+button:active {
+  opacity: 0.5;
+}
+
 body {
   font-family: "Josefin Sans", sans-serif;
   font-size: 16px;
@@ -53,26 +63,38 @@ body {
   width: 100%;
 }
 
+.menu-toggle,
+.sidebar-wrapper {
+  display: none;
+}
+@media screen and (max-width: 991px) {
+  .menu-toggle,
+.sidebar-wrapper {
+    display: block;
+  }
+}
+
 .header {
-  margin-bottom: 8vw;
-  height: 16vh;
+  margin-top: 3vh;
+  margin-bottom: 15vh;
   background-color: #ffffff;
 }
 .header .logo {
-  margin-top: 4vh;
+  margin-top: 6vh;
 }
 .header .nav {
   height: 10vh;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
-  margin-top: 4vh;
+  margin-top: 7vh;
+  font-size: 20px;
 }
-.header .nav-recipes, .header .nav-login {
+.header .nav-recipes {
   position: relative;
 }
-.header .nav-recipes ul, .header .nav-login ul {
+.header .nav-recipes ul {
   margin-top: -240px;
   position: absolute;
   display: flex;
@@ -91,28 +113,28 @@ body {
   transition: all 0.4s ease;
   z-index: 20;
 }
-.header .nav-recipes li, .header .nav-login li {
+.header .nav-recipes li {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.header .nav-recipes li:hover, .header .nav-login li:hover {
+.header .nav-recipes li:hover {
   background-color: rgba(197, 173, 181, 0.5);
   outline: none;
 }
-.header .nav-recipes li a, .header .nav-login li a {
+.header .nav-recipes li a {
   color: black;
   text-decoration: none;
   outline: none;
   font-size: 14px;
   font-weight: 400;
 }
-.header .nav-recipes button:focus + ul, .header .nav-login button:focus + ul {
+.header .nav-recipes button:focus + ul {
   opacity: 1;
   pointer-events: all;
-  transform: translateY(260px) translateX(-60px);
+  transform: translateY(40vh) translateX(-4vw);
   outline: none;
 }
 .header .nav button, .header .nav-home,
@@ -121,18 +143,22 @@ body {
   text-decoration: none;
   border: none;
   color: #a9a9a9;
-  font-size: 18px;
+  font-size: 22px;
   cursor: pointer;
   outline: none;
 }
+.header-bottom {
+  display: flex;
+  margin-bottom: 4vh;
+  justify-content: space-around;
+}
 .header .search {
-  margin-top: 6vh;
+  margin-top: 4vh;
 }
 .header .search input {
   outline: none;
 }
 .header .search input[type=search] {
-  -webkit-appearance: textfield;
   -webkit-box-sizing: content-box;
   font-family: inherit;
   font-size: 100%;
@@ -143,7 +169,7 @@ body {
   /* remove the search and cancel icon */
 }
 .header .search input[type=search] {
-  width: 18px;
+  width: 24px;
   padding-left: 10px;
   background: url("../img/search.svg") no-repeat 2px center;
   border: solid 1px transparent;
@@ -159,8 +185,8 @@ body {
   background-color: #fff;
 }
 .header .search input[type=search]:focus {
-  width: 130px;
-  padding-left: 32px;
+  width: 25vw;
+  padding: 1vh 2vw 1vh 5vw;
   color: #000;
   background-color: #fff;
   cursor: auto;
@@ -181,8 +207,16 @@ body {
   }
 }
 @media (max-width: 991px) {
+  .header {
+    margin-bottom: 8vh;
+  }
   .header .nav {
     display: none;
+  }
+}
+@media (max-width: 991px) {
+  .header-bottom {
+    flex-direction: column;
   }
 }
 
@@ -246,6 +280,14 @@ body {
     width: 20vw;
   }
 }
+@media (max-width: 767px) {
+  .hero {
+    background-position: center center;
+  }
+  .hero-info__title {
+    display: none;
+  }
+}
 
 .meals {
   padding-top: 6vh;
@@ -299,29 +341,26 @@ body {
   text-shadow: 0 0 3px #000;
 }
 @media (max-width: 1199px) {
-  .meals-list__item {
+  .meals__item {
     width: 26vw;
     margin-right: 3vw;
   }
-  .meals-list__item-name {
-    width: 23vw;
-    margin-top: 1vh;
-    margin-bottom: 1vh;
-    font-weight: 400;
-  }
 }
-@media (max-width: 991px) {
-  .meals-list {
+@media (max-width: 767px) {
+  .meals-wrap {
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .meals-list__item {
+  .meals__item {
     width: 60vw;
-    margin-right: 0;
   }
-  .meals-list__item-photo {
+  .meals__item-name {
+    margin-left: 2vw;
     width: 50vw;
+  }
+  .meals__item-photo img {
+    width: 120%;
   }
 }
 
@@ -394,15 +433,18 @@ body {
 }
 
 .footer {
-  padding: 6vh 0;
+  padding-top: 6vh;
   background-color: #000;
   color: rgba(254, 254, 254, 0.6);
   font-size: 14px;
 }
+.footer .logo {
+  margin-left: 2vw;
+}
 .footer .nav {
   margin-top: 3vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 .footer .nav-recipes, .footer .nav-login {
@@ -462,14 +504,16 @@ body {
 .footer .nav-home:hover {
   color: white;
 }
-.footer .rights {
-  font-size: 13px;
-  margin-top: 4vh;
-  color: #fefefe;
+.footer-bottom {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 2vh;
 }
-.footer .social {
-  align-items: flex-end;
-  justify-content: flex-end;
+.footer .rights {
+  display: flex;
+  font-size: 15px;
+  color: #fefefe;
+  margin-left: 30vw;
 }
 .footer .social a {
   color: #a9a9a9;
@@ -514,12 +558,10 @@ textarea::-ms-clear {
   display: flex;
   cursor: pointer;
 }
-
-.cd-main-nav {
-  /* reset style */
-  background: none;
-  cursor: auto;
-  margin-top: 3vh;
+@media screen and (max-width: 991px) {
+  .cd-main-nav {
+    margin-left: 0;
+  }
 }
 
 .cd-main-nav__list {
@@ -545,7 +587,7 @@ textarea::-ms-clear {
 
 .cd-main-nav__item.cd-main-nav__item--signin,
 .cd-main-nav__item.cd-main-nav__item--signup {
-  padding: 1vh 1.5vw;
+  padding: 2vh 3vw;
   border-radius: 0;
 }
 
@@ -556,6 +598,7 @@ textarea::-ms-clear {
   border-radius: 3px;
   border-bottom: 3px solid #B5002A;
   color: #fff;
+  margin-right: 3vw;
 }
 
 .cd-main-nav__item.cd-main-nav__item--signup {
@@ -601,11 +644,6 @@ textarea::-ms-clear {
   border-radius: 0.25em;
   transform: translateY(-30px);
   transition: transform 0.3s;
-}
-@media (max-width: 767px) {
-  .cd-signin-modal__container {
-    margin: 0;
-  }
 }
 
 .cd-signin-modal--is-visible .cd-signin-modal__container {
@@ -803,7 +841,7 @@ textarea::-ms-clear {
   transition: opacity 0.2s 0s, visibility 0s 0s;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 0px) {
   .cd-signin-modal__form {
     padding: 2em;
   }
@@ -861,7 +899,7 @@ textarea::-ms-clear {
   width: 40px;
   height: 40px;
   right: 0;
-  top: -40px;
+  top: -6vh;
   background: url("../img/cd-icon-close.svg") no-repeat center center;
   color: transparent;
   text-indent: 100%;
@@ -869,11 +907,6 @@ textarea::-ms-clear {
   overflow: hidden;
 }
 
-@media only screen and (min-width: 1170px) {
-  .cd-signin-modal__close {
-    display: none;
-  }
-}
 .cd-signin-modal__block {
   display: none;
 }
@@ -881,3 +914,107 @@ textarea::-ms-clear {
 .cd-signin-modal__block.cd-signin-modal__block--is-selected {
   display: block;
 }
+
+/* -------------------------------- 
+
+ /  x sigin/signup popup 
+
+  -------------------------------- */
+/* -------------------------------- 
+
+  x sidebar menu
+
+  -------------------------------- */
+#sidebar-wrapper {
+  position: fixed;
+  z-index: 2;
+  right: 0;
+  width: 20vw;
+  height: 60vh;
+  transition: all 0.4s ease 0s;
+  transform: translateX(250px);
+  background: rgba(255, 255, 255, 0.6);
+  border-left: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.sidebar-nav li.sidebar-nav-item a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  padding: 15px;
+}
+
+.sidebar-nav li a:hover {
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+  font-size: 1.2rem;
+  background: rgba(52, 58, 64, 0.1);
+  height: 80px;
+  line-height: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+  color: #fff;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
+}
+
+#sidebar-wrapper.active {
+  right: 250px;
+  width: 250px;
+  transition: all 0.4s ease 0s;
+}
+
+.menu-toggle {
+  position: fixed;
+  right: 12vh;
+  top: 3vh;
+  text-align: center;
+  text-decoration: none;
+  background: transparent;
+  line-height: 50px;
+  z-index: 999;
+}
+.menu-toggle .fa-bars {
+  color: #a9a9a9;
+}
+.menu-toggle .fa {
+  margin-right: 3vw;
+  margin-top: 6vh;
+}
+
+.menu-toggle:focus,
+.menu-toggle:hover {
+  text-decoration: none;
+  opacity: 0.6;
+}
+
+/* -------------------------------- 
+
+  / x sidebar menu
+
+  -------------------------------- */
