--- a/css/main.css
+++ b/css/main.css
@@ -949,13 +949,14 @@ textarea::-ms-clear {
 .sidebar-nav li.sidebar-nav-item a {
   display: block;
   text-decoration: none;
-  color: #fff;
+  color: #d24d57;
   padding: 15px;
 }
 
 .sidebar-nav li a:hover {
   text-decoration: none;
-  color: #fff;
+  transform: scale(1.1);
+  transition: all 0.5 ease;
   background: rgba(255, 255, 255, 0.2);
 }
 
